vcluster_versioned_docs/version-0.26.0/_partials/deploy/deploy.mdx
import Flow, { Step } from "@site/src/components/Flow";
import InterpolatedCodeBlock from "@site/src/components/InterpolatedCodeBlock";
import GlossaryTerm from '@site/src/components/GlossaryTerm'

import Tabs from "@theme/Tabs";
import TabItem from "@theme/TabItem";
import CodeBlock from '@theme/CodeBlock';
import TerraformDeploy from '!!raw-loader!./terraform-deploy.tf'
import InstallCLIFragment from './install-cli-beta.mdx'


<Tabs
  groupId="get-started"
  defaultValue="cli"
  values={[
    { label: "vCluster CLI", value: "cli" },
    { label: 'Helm', value: 'helm' },
    { label: 'Terraform', value: 'terraform' },
    { label: 'Argo CD', value: 'argo' },
    { label: 'Cluster API', value: 'cluster-api' },
  ]
}>
<TabItem value="cli">

The vCluster CLI provides the most straightforward way to deploy and manage virtual clusters.

<Flow>
<Step>
Install the vCluster CLI:

<InstallCLIFragment/>

</Step>

<Step>
Deploy vCluster:

<InterpolatedCodeBlock 
  code={`vcluster create [[VAR:CLUSTER NAME:my-vcluster]] --namespace [[VAR:NAMESPACE:team-x]] --values [[VAR:CONFIG FILE:vcluster.yaml]]`} 
  language="bash" 
/>

:::note
After installation, vCluster automatically switches your Kubernetes context to the new virtual cluster. You can now run `kubectl` commands against the virtual cluster.
:::

</Step>
</Flow>

</TabItem>
<TabItem value="helm">

Helm provides fine-grained control over the deployment process and integrates well with existing Helm-based workflows.

<Flow>
<Step>

Deploy vCluster using the `helm upgrade` command:

<InterpolatedCodeBlock 
  code={`helm upgrade --install [[VAR:CLUSTER NAME:my-vcluster]] vcluster \\
    --values [[VAR:CONFIG FILE:vcluster.yaml]] \\
    --repo https://charts.loft.sh \\
    --namespace [[VAR:NAMESPACE:team-x]] \\
    --repository-config='' \\
    --create-namespace`} 
  language="bash" 
/>

</Step>
</Flow>

</TabItem>
<TabItem value="terraform">

You can use Terraform to deploy vCluster as code with version control and state management.

<Flow>
<Step>

Create a `main.tf` file to define your vCluster deployment using the Terraform Helm provider:

<CodeBlock language="hcl">{TerraformDeploy}</CodeBlock>

</Step>

<Step>

Install the required [Helm provider](https://registry.terraform.io/providers/hashicorp/helm/latest) and initialize Terraform:

```bash
terraform init
```

</Step>

<Step>

Generate a plan to preview the changes:

```bash
terraform plan
```

<br />
Review the plan output to verify connectivity and proposed changes.
</Step>

<Step>

Deploy vCluster:

```bash
terraform apply
```

</Step>
</Flow>

</TabItem>
<TabItem value="argo">

ArgoCD deployment enables GitOps workflows for vCluster management, and provides automated deployment, drift detection, and declarative configuration management through Git repositories.

To deploy vCluster using ArgoCD, you need the following files:

- `vcluster.yaml` for your vCluster configuration options.
- `<CLUSTER_NAME>-app.yaml` for your ArgoCD `Application` definition. Replace `<CLUSTER_NAME>` with your actual cluster name.

<br />

<Flow>
<Step>

Create the ArgoCD `Application` file `<CLUSTER_NAME>-app.yaml`, which references the vCluster Helm chart:

<InterpolatedCodeBlock
  code={`apiVersion: argoproj.io/v1alpha1
kind: Application
metadata:
  name: [[VAR:CLUSTER NAME:my-vcluster]]
  namespace: argocd
spec:
  project: default
  source:
    chart: vcluster
    repoURL: https://charts.loft.sh
    helm:
      releaseName: [[VAR:CLUSTER NAME:my-vcluster]]
      valueFiles:
        - vcluster.yaml
  destination:
    server: https://kubernetes.default.svc
    namespace: [[VAR:NAMESPACE:team-x]]`} 
  language="yaml" 
/>

</Step>

<Step>

Commit and push these files to your configured ArgoCD repository.

</Step>

<Step>

Sync your ArgoCD repository with your configured cluster:

<InterpolatedCodeBlock 
 code={`argocd app sync [[VAR:CLUSTER NAME:my-vcluster]]`} 
 language="bash" 
/>

</Step>
</Flow>

</TabItem>
<TabItem value="cluster-api">

Cluster API (CAPI) provides lifecycle management for Kubernetes clusters. The vCluster CAPI provider enables you to manage virtual clusters using the same declarative APIs and tooling used for physical clusters. For more details, see the [Cluster API Provider for vCluster documentation](https://github.com/loft-sh/cluster-api-provider-vcluster).

<Flow>
<Step>

Install the [`clusterctl` CLI](https://cluster-api.sigs.k8s.io/user/quick-start.html#install-clusterctl).

</Step>

<Step>

Install the vCluster provider:

```bash
clusterctl init --infrastructure vcluster:v0.2.0
```

</Step>

<Step>

Export environment variables for the Cluster API provider to create the manifest. The manifest is applied to your Kubernetes cluster, which deploys a vCluster.

<InterpolatedCodeBlock 
  code={`export CLUSTER_NAME=[[VAR:CLUSTER NAME:my-vcluster]]
export CLUSTER_NAMESPACE=[[VAR:NAMESPACE:team-x]]
export VCLUSTER_YAML=$(awk '{printf "%s\\n", $0}' [[VAR:CONFIG FILE:vcluster.yaml]])`} 
  language="bash" 
/>

</Step>

<Step>

Create the namespace for the vCluster using the exported variable:

<InterpolatedCodeBlock 
  code={`kubectl create namespace [[VAR:CLUSTER NAMESPACE:team-x]]`} 
  language="bash" 
/>
</Step>

<Step>

Generate the required manifests and apply them using the exported variables:

<InterpolatedCodeBlock
  code={`clusterctl generate cluster [[VAR:CLUSTER NAME:my-vcluster]] \\
    --infrastructure vcluster \\
    --target-namespace [[VAR:CLUSTER NAMESPACE:team-x]] \\
  | kubectl apply -f -`}
  language="bash"
/>

:::note Kubernetes version
The Kubernetes version for the vCluster is not set at the CAPI provider command. Configure it in the `vcluster.yaml` file based on your Kubernetes distribution.
:::

</Step>

<Step>

Wait for vCluster to become ready by monitoring the vCluster custom resource status:

<InterpolatedCodeBlock
  code={`kubectl wait --for=condition=ready vcluster -n [[VAR:CLUSTER NAMESPACE:team-x]] [[VAR:CLUSTER NAME:my-vcluster]] --timeout=300s`}
  language="bash"
/>

</Step>
</Flow>

</TabItem>
</Tabs>
